# a11y-lint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  PRESS_RELEASE.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  RELEASE_NOTES.md  RELEASING.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
a11y_lint/: __init__.py  cli.py  errors.py  render.py  report_md.py  scan_cli_text.py  scorecard.py  validate.py
a11y_lint/schemas/: cli.error.schema.v0.1.json
scripts/: verify.sh
site/: astro.config.mjs  package-lock.json
site/src/: site-config.ts
tests/: __init__.py  test_cli.py  test_errors.py  test_render.py  test_report_md.py  test_scan_cli_text.py  test_scorecard.py  test_validate.py
